hphp/test/slow/coeffects/read_globals/read-static-prop-lambda-error-1.php.expectf
Fatal error: Reading static properties requires the capability ReadGlobals, which is not provided by the context. Add the context `[read_globals]` after the function parameter list (or amend an existing context with a new comma delineated entry `read_globals`). in %s on line 16
